[package]
name = "stfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
utils = { path = "../utils" }
windows = { version = "0.39.0", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Media_MediaFoundation", "Win32_System_Com_StructuredStorage", "Win32_Foundation", 
"Win32_Media_Audio_Endpoints", "Win32_UI_Shell_PropertiesSystem", "Win32_Devices_FunctionDiscovery"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
