[package]
name = "wmx"
version = "0.1.0"
edition = "2021"
description = "A small program for manipulating audio devices and device sessions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
utils = { path = "../utils" }
anyhow = "1.0"
dioxus = "0.3.2"
windows = { version = "0.39.0", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Media_MediaFoundation", "Win32_System_Com_StructuredStorage", "Win32_Foundation", 
"Win32_Media_Audio_Endpoints", "Win32_UI_Shell_PropertiesSystem", "Win32_Devices_FunctionDiscovery"] }
dioxus-desktop = "0.3.0"
regex = "1.7.1"

[dev-dependencies]
dioxus-hot-reload = "0.1.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
# optimize for file size, rather than speed